--- a/cmake/CMakeSettings.json
+++ b/cmake/CMakeSettings.json
@@ -18,8 +18,7 @@
         },
         {
           "name": "onnxruntime_WINML_NAMESPACE_OVERRIDE",
-          "value": "Microsoft",
-          "type": "STRING"
+          "value": "Microsoft"
         },
         {
           "name": "onnxruntime_USE_DML",
@@ -52,8 +51,7 @@
         },
         {
           "name": "onnxruntime_WINML_NAMESPACE_OVERRIDE",
-          "value": "Microsoft",
-          "type": "STRING"
+          "value": "Microsoft"
         },
         {
           "name": "onnxruntime_USE_DML",
@@ -67,20 +65,6 @@
         }
       ],
       "cmakeToolchain": "${projectDir}\\wcos_toolchain.cmake"
-    },
-    {
-      "name": "WSL-GCC-Debug",
-      "generator": "Ninja",
-      "configurationType": "Debug",
-      "buildRoot": "${projectDir}\\out\\build\\${name}",
-      "installRoot": "${projectDir}\\out\\install\\${name}",
-      "cmakeExecutable": "cmake",
-      "cmakeCommandArgs": "",
-      "buildCommandArgs": "",
-      "ctestCommandArgs": "",
-      "inheritEnvironments": [ "linux_x64" ],
-      "wslPath": "${defaultWSLPath}",
-      "variables": []
     }
   ]
 }
