--- a/.github/workflows/publish-js-apidocs.yml
+++ b/.github/workflows/publish-js-apidocs.yml
@@ -13,7 +13,7 @@ on:
 
 concurrency:
   group: "apidocs-js"
-  cancel-in-progress: true
+  cancel-in-progress: false
 
 permissions:
   contents: write
