--- a/tools/ci_build/github/azure-pipelines/orttraining-linux-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/orttraining-linux-ci-pipeline.yml
@@ -98,7 +98,7 @@ jobs:
             set -ex; \
             ccache -s; \
             /opt/python/cp38-cp38/bin/python3 /onnxruntime_src/tools/ci_build/build.py \
-              --build_dir /build --cmake_generator Ninja \
+              --build_dir /build --cmake_generator 'Unix Makefiles' \
               --config Release \
               --skip_submodule_sync \
               --build_shared_lib \
