--- a/.github/workflows/publish-gh-pages.yml
+++ b/.github/workflows/publish-gh-pages.yml
@@ -80,6 +80,14 @@ jobs:
           branch: main
           path: apidocs
 
+      - name: Download JS apidocs artifact
+        uses: dawidd6/action-download-artifact@v2
+        with:
+          name: onnxruntime-node-apidocs
+          workflow: publish-js-apidocs.yml
+          branch: main
+          path: apidocs
+
       - name: Move apidocs folders into place
         run: |
           sudo rm -rf _site/docs/api/c
@@ -92,6 +100,9 @@ jobs:
           sudo mv apidocs/docs/api/python _site/docs/api
           sudo rm -rf _site/docs/api/objectivec
           sudo mv apidocs/docs/api/objectivec _site/docs/api
+          sudo rm -rf _site/docs/api/js
+          sudo mv apidocs/docs/api/js _site/docs/api
+
 
       - name: Upload site
         uses: actions/upload-pages-artifact@v1
